--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_storage: ^10.2.16
   font_awesome_flutter: ^10.1.0
   image_picker: ^0.8.5+3
   firebase_core: ^1.17.0
@@ -49,6 +48,9 @@ dependencies:
   bottom_navy_bar: ^6.0.0
   flutter_barcode_scanner: ^2.0.0
   sizer: ^2.0.15
+  qr_flutter: ^4.0.0
+  firebase_storage: ^10.2.17
+  intl: ^0.17.0
 
 
 dev_dependencies:
@@ -59,7 +61,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/image/code.png"
+  image_path: "assets/image/logo.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
